--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 * { box-sizing: border-box; margin: 0; padding: 0; }
 body, html { height: 100%; font-family: Arial, sans-serif; background: #000; color: #eee; padding-top: 30px;  overflow-y: auto;}
-body { height: 100%;  overflow-y: auto;}
+body {
+  background-image: url('https://drasler.ru/wp-content/uploads/2023/02/%D0%9A%D1%80%D0%B0%D1%81%D0%B8%D0%B2%D1%8B%D0%B9-%D1%87%D0%B5%D1%80%D0%BD%D1%8B%D0%B9-%D1%84%D0%BE%D0%BD-%D1%81-%D1%82%D0%BE%D1%87%D0%BA%D0%B0%D0%BC%D0%B8_016.jpg');
+  background-size: cover;         /* Заполнить весь экран */
+  background-position: center;    /* Центрировать */
+  background-repeat: no-repeat;   /* Не повторять */
+  background-attachment: fixed;   /* Фон не прокручивается (эффект параллакса) */
+  background-color: #000;         /* Резервный цвет, пока картинка грузится */
+}
 #wrapper { display: flex; height: 100%; overflow: hidden; position: relative; }
 aside#sidebar {
   width: 250px;
@@ -73,7 +80,11 @@ video { width: 60%; max-height: 60vh; border: none; background: #000; display: n
   border-radius: 8px;
   word-wrap: break-word;
   overflow-wrap: break-word;
-  white-space: normal;  
+  white-space: normal;
+  width: 60%;
+  margin: 40px auto;
+  position: relative;
+  z-index: 1;
 }
 
 @media (max-width: 600px) {
@@ -83,6 +94,8 @@ video { width: 60%; max-height: 60vh; border: none; background: #000; display: n
   .menu-item > a, .menu-item > button { font-size: 16px; padding: 12px 16px; }
   .submenu li a { font-size: 14px; padding: 10px 30px; }
   .scrollButton { padding: 5px 5px; font-size: 10px; }
+  #textContent {width: 100%}
+  sideBackground {display: none;}
 }
 #topbar {
   position: fixed;
@@ -189,4 +202,27 @@ video { width: 60%; max-height: 60vh; border: none; background: #000; display: n
   background: #222; /* Более светлый фон */
   color: #fff;
 }
-	
+
+.sideBackground {
+  position: fixed;
+  display: none;
+  bottom: 0;
+  width: auto;
+  height: 400px;
+  opacity: 1;
+  z-index: 0;
+  pointer-events: none;
+}
+
+#bgLeft {
+  left: 0px;
+}
+
+#bgRight {
+  right: 15px;
+}
+
+#deion {
+  position: relative;  /* важно! */
+  z-index: 1;
+}
