--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 * { box-sizing: border-box; margin: 0; padding: 0; }
-body, html { height: 100%; font-family: Arial, sans-serif; background: #000; color: #eee; padding-top: 30px;  overflow-y: auto;}
+body, html { height: 100%; font-family: Arial, sans-serif; background: #000; color: #eee; padding-top: 45px; overflow: hidden}
 body {
   background-image: url('https://drasler.ru/wp-content/uploads/2023/02/%D0%9A%D1%80%D0%B0%D1%81%D0%B8%D0%B2%D1%8B%D0%B9-%D1%87%D0%B5%D1%80%D0%BD%D1%8B%D0%B9-%D1%84%D0%BE%D0%BD-%D1%81-%D1%82%D0%BE%D1%87%D0%BA%D0%B0%D0%BC%D0%B8_016.jpg');
-  background-size: cover;         /* Заполнить весь экран */
-  background-position: center;    /* Центрировать */
-  background-repeat: no-repeat;   /* Не повторять */
-  background-attachment: fixed;   /* Фон не прокручивается (эффект параллакса) */
-  background-color: #000;         /* Резервный цвет, пока картинка грузится */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: #000;
 }
-#wrapper { display: flex; height: 100%; overflow: hidden; position: relative; }
+
+#wrapper { display: flex; min-height: 100%; overflow: hidden; position: relative; }
 aside#sidebar {
   width: 250px;
   background: #111;
@@ -26,7 +27,15 @@ aside#sidebar {
 aside#sidebar.open {
   left: 0;
 }
-main#content { flex: 1; padding: 20px; overflow-y: auto; width: 100%; min-height: 100vh;}
+main#content { flex: 1; padding: 20px; overflow-y: auto; width: 100%; min-height: 90vh;}
+
+#content {
+  position: relative;
+  height: calc(100vh - 58px);
+  overflow-y: auto;
+  padding: 20px;
+  box-sizing: border-box;
+}
 
 #menuButton {
   position: fixed; top: 8px; left: 10px; z-index: 1100;
@@ -84,7 +93,7 @@ video { width: 60%; max-height: 60vh; border: none; background: #000; display: n
   width: 60%;
   margin: 40px auto;
   position: relative;
-  z-index: 1;
+  z-index: 1;	
 }
 
 @media (max-width: 600px) {
@@ -94,8 +103,11 @@ video { width: 60%; max-height: 60vh; border: none; background: #000; display: n
   .menu-item > a, .menu-item > button { font-size: 16px; padding: 12px 16px; }
   .submenu li a { font-size: 14px; padding: 10px 30px; }
   .scrollButton { padding: 5px 5px; font-size: 10px; }
-  #textContent {width: 100%}
-  sideBackground {display: none;}
+  #textContent {width: 100%; padding-bottom: 100px;}
+  .sideBackground {display: none;}
+  html, body { overflow-x: hidden; max-width: 100%}
+  main#content {min-height: 50vh;}
+  #content {height: calc(92vh - 58px);}
 }
 #topbar {
   position: fixed;
@@ -142,13 +154,13 @@ video { width: 60%; max-height: 60vh; border: none; background: #000; display: n
 	
 #scrollPanel {
   display: flex;
-  overflow-x: auto; /* ← горизонтальная прокрутка */
-  gap: 10px; /* промежуток между кнопками */
+  overflow-x: auto;
+  gap: 10px;
   padding: 10px;
   margin-top: 20px;
   background: #111;
   border-radius: 10px;
-  scrollbar-width: thin; /* для Firefox */
+  scrollbar-width: thin;
   croll-behavior: smooth;
 }
 
@@ -162,7 +174,7 @@ video { width: 60%; max-height: 60vh; border: none; background: #000; display: n
 }
 
 .scrollButton {
-  flex: 0 0 auto; /* не растягивать кнопки */
+  flex: 0 0 auto;
   padding: 10px 20px;
   background: #333;
   color: #eee;
@@ -199,7 +211,7 @@ video { width: 60%; max-height: 60vh; border: none; background: #000; display: n
   background: #000;
 }
 .scrollButton.active {
-  background: #222; /* Более светлый фон */
+  background: #222;
   color: #fff;
 }
 
@@ -223,7 +235,7 @@ video { width: 60%; max-height: 60vh; border: none; background: #000; display: n
 }
 
 #deion {
-  position: relative;  /* важно! */
+  position: relative;
   z-index: 1;
 }
 
