--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-color: #000;
+  scrollbar-width: thin;
+  scrollbar-color: #444 #111;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #444; /* Сам ползунок */
+  border-radius: 8px; /* Скругление */
 }
 
 #wrapper { display: flex; min-height: 100%; overflow: hidden; position: relative; }
@@ -107,7 +114,7 @@ video { width: 60%; max-height: 60vh; border: none; background: #000; display: n
   .sideBackground {display: none;}
   html, body { overflow-x: hidden; max-width: 100%}
   main#content {min-height: 50vh;}
-  #content {height: calc(92vh - 58px);}
+  #content {max-height: 100%;}
 }
 #topbar {
   position: fixed;
@@ -157,11 +164,18 @@ video { width: 60%; max-height: 60vh; border: none; background: #000; display: n
   overflow-x: auto;
   gap: 10px;
   padding: 10px;
-  margin-top: 20px;
   background: #111;
   border-radius: 10px;
   scrollbar-width: thin;
-  croll-behavior: smooth;
+  scroll-behavior: smooth;
+}
+
+.scrollContainer {
+  background: #111;
+  border-radius: 10px;
+  padding: 5px;
+  margin-top: 5px;
+  overflow: hidden; /* ← скрывает выступающие углы ползунка */
 }
 
 #scrollPanel::-webkit-scrollbar {
@@ -170,7 +184,11 @@ video { width: 60%; max-height: 60vh; border: none; background: #000; display: n
 
 #scrollPanel::-webkit-scrollbar-thumb {
   background: #555;
-  border-radius: 4px;
+  border-radius: 8px;
+}
+
+#scrollPanel::-webkit-scrollbar {
+  height: 8px;
 }
 
 .scrollButton {
@@ -266,4 +284,18 @@ video { width: 60%; max-height: 60vh; border: none; background: #000; display: n
 
 .toggleMoreBtn:hover {
   background: #555;
+}
+
+.moreText {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.5s ease;
+  display: block; /* обязательно! чтобы не ломался layout */
+  opacity: 0;
+  transition: max-height 0.5s ease, opacity 0.5s ease;
+}
+
+.moreText.expanded {
+  max-height: 1000px; /* гарантированно больше любого контента */
+  opacity: 1;
 }
