--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ nav.menu ul { list-style: none; flex-grow: 1;}
 #content h1 { margin-bottom: 10px; font-size: 2rem; }
 #content p { margin-bottom: 20px; line-height: 1.5; }
 
-video { width: 60%; max-height: 60vh; border: none; background: #000; display: none; margin: auto}
+video { width: 60%;  border: none; background: #000; display: none; margin: auto; height: auto}
 #textContent {
   display: none;
   padding: 0;
@@ -208,7 +208,6 @@ video { width: 60%; max-height: 60vh; border: none; background: #000; display: n
 }
 #playerDon {
   width: 100%;
-  max-width: 800px;
   height: auto;	
   border: 3px solid #444;
   border-radius: 12px;
