--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * { box-sizing: border-box; margin: 0; padding: 0; }
-body, html { height: 100%; font-family: Arial, sans-serif; background: #000; color: #eee; padding-top: 45px; overflow: hidden}
+body, html { height: 100%; font-family: Arial, sans-serif; background: #000; color: #eee; overflow: hidden}
 body {
   background-image: url('https://drasler.ru/wp-content/uploads/2023/02/%D0%9A%D1%80%D0%B0%D1%81%D0%B8%D0%B2%D1%8B%D0%B9-%D1%87%D0%B5%D1%80%D0%BD%D1%8B%D0%B9-%D1%84%D0%BE%D0%BD-%D1%81-%D1%82%D0%BE%D1%87%D0%BA%D0%B0%D0%BC%D0%B8_016.jpg');
   background-size: cover;
@@ -16,7 +16,7 @@ body::-webkit-scrollbar-thumb {
   border-radius: 8px; /* Скругление */
 }
 
-#wrapper { display: flex; min-height: 100%; overflow: hidden; position: relative; }
+#wrapper { display: flex; min-height: 100%; overflow: hidden; position: relative; padding-top: 58px;}
 aside#sidebar {
   width: 250px;
   background: #111;
@@ -34,13 +34,12 @@ aside#sidebar {
 aside#sidebar.open {
   left: 0;
 }
-main#content { flex: 1; padding: 20px; overflow-y: auto; width: 100%; min-height: 90vh;}
+main#content { flex: 1; overflow-y: auto; width: 100%; min-height: 90vh;}
 
 #content {
   position: relative;
   height: calc(100vh - 58px);
   overflow-y: auto;
-  padding: 20px;
   box-sizing: border-box;
 }
 
@@ -218,7 +217,6 @@ video { width: 60%;  border: none; background: #000; display: none; margin: auto
 }
 #playerUls {
   width: 100%;
-  max-width: 800px;
   height: auto;	
   border: 3px solid #444;
   border-radius: 12px;
@@ -287,6 +285,7 @@ video { width: 60%;  border: none; background: #000; display: none; margin: auto
 
 .moreText {
   max-height: 0;
+  margin-top: 20px;
   overflow: hidden;
   transition: max-height 0.5s ease;
   display: block;
@@ -297,4 +296,69 @@ video { width: 60%;  border: none; background: #000; display: none; margin: auto
 .moreText.expanded {
   max-height: 1000px;
   opacity: 1;
+}
+
+.centeredTitle {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+
+.status-done {
+  display: inline-block;
+  text-indent: 0;
+  background-color: #1b5e20; /* насыщенный зелёный */
+  color: white;
+  padding: 2px 8px;
+  border-radius: 6px;
+  font-size: 0.9rem;
+  font-weight: bold;
+}
+
+.status-writing {
+  display: inline-block;
+  text-indent: 0;
+  background-color: #ff9800; /* оранжевый */
+  color: black;
+  padding: 5px 8px;
+  border-radius: 6px;
+  font-size: 0.9rem;
+  font-weight: bold;
+}
+
+.desc {
+  display: inline-block;
+  padding: 10px 10px;
+  border-radius: 6px;
+  color: #fff;
+  background-color: #282828;
+  vertical-align: middle;
+}
+
+.gridInfo {
+  display: grid;
+  grid-template-columns: 0.5fr 2fr;
+  gap: 10px 20px;
+  margin-top: 15px;
+}
+
+.gridInfo > div {
+  font-size: 1rem;
+  color: #eee;
+}
+
+.gridInfo .label {
+  font-weight: bold;
+  color: #ccc;
+}
+
+.gridInfo hr {
+  grid-column: 1 / -1;
+  border: none;
+  border-top: 1px solid #444;
+  margin: 10px 0;
+}
+
+body.loading {
+    overflow: hidden;
 }
