--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * { box-sizing: border-box; margin: 0; padding: 0; }
 body, html { height: 100%; font-family: Arial, sans-serif; background: #000; color: #eee; overflow: hidden}
 body {
-  background-image: url('https://drasler.ru/wp-content/uploads/2023/02/%D0%9A%D1%80%D0%B0%D1%81%D0%B8%D0%B2%D1%8B%D0%B9-%D1%87%D0%B5%D1%80%D0%BD%D1%8B%D0%B9-%D1%84%D0%BE%D0%BD-%D1%81-%D1%82%D0%BE%D1%87%D0%BA%D0%B0%D0%BC%D0%B8_016.jpg');
+  background-image: url('https://abrakadabra.fun/uploads/posts/2022-03/1646172153_2-abrakadabra-fun-p-chernii-fon-v-krapinku-2.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
